# System_Integration

./: .gitignore  package-lock.json
01.data_parsing_server_pt1/: encoding.py  javas-parsing.js  main.py  package-lock.json  package.json  python-parsing.py
02.Text-based_Data_Formats/: me.csv  me.json  me.toml  me.txt  me.xml  me.yaml
03.Modules/html_esmodules/: index.html  index.js  myModule.js
03.Modules/htmlclassic/: index.html
03.Modules/node_commonjs/: index.js
03.Modules/python_main/: main_importer.py  potential_library.py
03a.data_parsing_server_pt3/01.node/: app.js
03a.data_parsing_server_pt3/02.python/: main.py  pyproject.toml
04.data_parsing/: javas-parsing.js  package-lock.json  python-parsing.py
04.encode_decode/01.node/: index.js
04.encode_decode/02.python/: main.py
04a.SSE/01.node/: app.js  package-lock.json  package.json
04b.granular_access_db_task/Exposee/: ReadMe.md
04b.granular_access_db_task/Integrator/: ReadMe.md
06a.websocket/: package-lock.json  package.json
08a.WebRTC_EXAMPLE/: package-lock.json  package.json
08b.Generate_code_documentation_for_your_DLS_project/: README.md
10a.Document_a_database/: README.md
11a.Auth_Integration/: package-lock.json  package.json
11b.payment_integration/: package-lock.json  package.json
13a.GraphQL/: package-lock.json  package.json
19._Multipart_Forms/: index.html
19._Multipart_Forms/02._python/: main.py  pyproject.toml
20._Base64_images/: index.html
21_Audio/: index.html
22._MPEG-DASH/: app.js  package-lock.json  package.json
23._Embedded_Yt/: embededyt.html
(+359 files in other folders)
