[project]
name = "02-python"
version = "0.1.0"
description = ""
authors = [
    {name = "KaiSej007",email = "kailyubo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "02"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
